# ReturnShield

./: .gitignore  LICENSE  README.md  docker-compose.yml
app-frontend/: Dockerfile  index.html  package-lock.json  package.json
app-frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
apps/shopper-frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  celerybeat-schedule  compose.env.example  db.sqlite3  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/analytics/: posthog.py  tests.py  views.py
backend/libs/ecommerce-integrations-sdk/: README.md  pyproject.toml
backend/libs/ecommerce-integrations-sdk/ecom_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/libs/ecommerce-integrations-sdk/ecom_sdk/shopify/: client.py
docs/: REQUIRED-CREDENTIALS-SUMMARY.md  code-review-analysis.md  credentials-database.md  credentials-django.md  credentials-helpscout.md  credentials-posthog.md  credentials-sendgrid.md  credentials-shopify.md  credentials-stripe.md  dashboard-walkthrough.md  demo-runbook.md  launch-plan.md  logging.md  marketing-assets.md  marketing-plan.md  milestone-journal.md  operator-playbook.md  work-log-2025-11-12.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
posthog-proxy/: Dockerfile  nginx.conf
scripts/: verify_keys.py
(+152 files in other folders)
